syntax = "proto3";

package network;

import "data.proto";
import "data_item.proto";
import "data_player.proto";
import "data_pet.proto";

/*********************************************************\
 ** BOOT Packets
\*********************************************************/

message DGBootPacket {
  repeated TMobTable mobs = 1;
  repeated TItemTable items = 2;
  repeated TShopTable shops = 3;
  repeated TSkillTable skills = 4;
  repeated TRefineTable refines = 5;
  repeated TItemAttrTable attrs = 6;
  repeated TItemAttrTable rare_attrs = 7;
  repeated TItemAttrTable costume_attrs = 8;
  repeated TBuildingLand lands = 9;
  repeated TBuildingObjectProto object_protos = 10;
  repeated TBuildingObject objects = 11;
  repeated TGuildSafeboxInitial guild_safeboxes = 12;
  repeated THorseUpgradeProto horse_upgrades = 13;
  repeated THorseBonusProto horse_boni = 14;
  repeated TGayaShopData gaya_shops = 16;
  repeated TAttrtreeProto attrtrees = 17;
  repeated TRuneProtoTable runes = 18;
  repeated TRunePointProtoTable rune_points = 19;
  repeated TXmasRewards xmas_rewards = 20;
  repeated TSoulProtoTable soul_protos = 21;
  TItemIDRangeTable item_id_range = 22;
  TItemIDRangeTable item_id_range_spare = 23;
  repeated TAdminInfo admins = 24;
  repeated uint32 admin_configs = 25;
  uint32 current_time = 26;
  repeated TPetAdvancedSkillProto pet_skills = 27;
  repeated TPetAdvancedEvolveProto pet_evolves = 28;
  repeated TPetAdvancedAttrProto pet_attrs = 29;
  repeated TCrystalProto crystal_protos = 30;
}

message DGMapLocationsPacket {
  repeated TMapLocation maps = 1;
}

message DGLoginSuccessPacket {
  TAccountTable account_info = 1;
}

message DGPlayerCreateSuccessPacket {
  uint32 account_index = 1;
  TSimplePlayer player = 2;
}

message DGPlayerDeleteSuccessPacket {
  uint32 account_index = 1;
}

message DGPlayerLoadPacket {
  TPlayerTable player = 1;
}

message DGPlayerSkillLoadPacket {
  uint32 pid = 1;
  repeated TPlayerSkill skills = 2;
}

message DGItemLoadPacket {
  uint32 pid = 1;
  repeated TItemData items = 2;
}

message DGPetLoadPacket {
  repeated TPetAdvancedTable pets = 1;
}

message DGQuestLoadPacket {
  uint32 pid = 1;
  repeated TQuestTable quests = 2;
}

message DGAffectLoadPacket {
  uint32 pid = 1;
  repeated TPacketAffectElement affects = 2;
}

message DGSafeboxLoadPacket {
  uint32 account_id = 1;
  uint32 size = 2;
  int64 gold = 3;
  bool is_mall = 4;
  repeated TItemData items = 5;
}

message DGSafeboxChangeSizePacket {
  uint32 size = 1;
}

message DGSafeboxChangePasswordAnswerPacket {
  bool flag = 1;
}

message DGEmpireSelectPacket {
  uint32 empire = 1;
}

message DGP2PInfoPacket {
  bytes host = 1;
  uint32 port = 2;
  uint32 listen_port = 3;
  uint32 channel = 4;
  bool processor_core = 5;
}

message DGLoginAlreadyPacket {
  bytes login = 1;
}

message DGTimePacket {
  uint32 time = 1;
}

message DGReloadShopTablePacket {
  repeated TShopTable shops = 1;
}

message DGReloadMobProtoPacket {
  repeated TMobTable mobs = 1;
}

message DGReloadProtoPacket {
  repeated TSkillTable skills = 1;
  repeated TItemTable items = 2;
  repeated TMobTable mobs = 3;
  repeated TShopTable shops = 4;
  repeated TSoulProtoTable soul_protos = 5;
  repeated TPetAdvancedSkillProto pet_skills = 6;
  repeated TPetAdvancedEvolveProto pet_evolves = 7;
  repeated TPetAdvancedAttrProto pet_attrs = 8;
}

message DGChangeNamePacket {
  uint32 pid = 1;
  bytes name = 2;
}

message DGAuthLoginPacket {
  bool result = 1;
}

message DGChangeEmpirePrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 empire = 3;
  bool log = 4;
  uint32 end_time_sec = 5;
}

message DGChangeGuildPrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 guild_id = 3;
  bool log = 4;
  uint32 end_time_sec = 5;
}

message DGChangeCharacterPrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 pid = 3;
  bool log = 4;
}

message DGMoneyLogPacket {
  uint32 type = 1;
  uint32 vnum = 2;
  uint64 gold = 3;
}

message DGSetEventFlagPacket {
  bytes flag_name = 1;
  int32 value = 2;
}

message DGVCardPacket {
  uint32 id = 1;
  bytes sell_character = 2;
  bytes sell_account = 3;
  bytes buy_character = 4;
  bytes buy_account = 5;
}

message DGNoticePacket {
  bytes notice = 1;
}

message DGAddBlockCountryIPPacket {
  uint32 ip_from = 1;
  uint32 ip_to = 2;
}

message DGBlockExceptionPacket {
  uint32 cmd = 1;
  bytes login = 2;
}

message DGMyShopPricelistPacket {
  repeated TItemPriceInfo price_info = 1;
}

message DGReloadAdminPacket {
  repeated TAdminInfo admins = 1;
  repeated uint32 admin_configs = 2;
}

message DGDetailLogPacket {
  uint32 pid = 1;
}

message DGItemAwardInformerPacket {
  bytes login = 1;
  bytes command = 2;
  uint32 vnum = 3;
}

message DGRespondChannelStatusPacket {
  repeated TChannelStatus states = 1;
}

message DGChannelSwitchPacket {
  bytes ip = 1;
  uint32 port = 2;
}

message DGSpareItemIDRangePacket {
  TItemIDRangeTable data = 1;
}

message DGUpdateHorseNamePacket {
  uint32 player_id = 1;
  bytes horse_name = 2;
}

message DGSpawnMobTimedPacket {
  uint32 mob_vnum = 1;
  uint32 map_index = 2;
  int32 x = 3;
  int32 y = 4;
  uint32 channel = 5;
  int32 target_time = 6;
  int32 despawn_time = 7;
}

message DGItemOfflineRestorePacket {
  repeated TItemData items = 1;
}

message DGOfflineMessagesLoadPacket {
  uint32 pid = 1;
  repeated TOfflineMessage messages = 2;
}

message DGItemRefundLoadPacket {
  message RefundItem {
    uint32 id = 1;
    bool socket_set = 2;
    TItemData item = 3;
  }

  uint32 pid = 1;
  repeated RefundItem items = 2;
}

message DGWhisperPlayerExistResultPacket {
  uint32 pid = 1;
  bytes message = 2;
  bytes target_name = 3;
  bool is_exist = 4;
  bool is_blocked = 5;
  bool return_money = 6;
}

message DGWhisperPlayerMessageOfflinePacket {
  uint32 pid = 1;
  bytes message = 2;
  uint32 target_pid = 3;
  bytes target_name = 4;
}

message DGReloadXmasRewardsPacket {
  repeated TXmasRewards rewards = 1;
}

message DGSetAveragePricesPacket {
  message Element {
    uint32 vnum = 1;
	uint64 price = 2;
  }
  
  repeated Element prices = 1;
}

message DGSkillColorLoadPacket {
  message SkillColor {
    repeated uint32 colors = 1;
  }
  
  repeated SkillColor colors = 1;
}

message DGEquipmentPageLoadPacket {
  uint32 pid = 1;
  repeated TEquipmentChangerTable equipments = 2;
}

message DGGuildDungeonPacket {
  uint32 guild_id = 1;
  uint32 channel = 2;
  uint32 map_index = 3;
}

message DGGuildDungeonCDPacket {
  uint32 guild_id = 1;
  uint32 time = 2;
}

message DGMaintenancePacket {
  int32 shutdown_timer = 1;
  bool maintenance = 2;
  int32 maintenance_duration = 3;
}

message DGWhitelistIPPacket {
  string ip = 1;
}

message DGAuctionDeletePlayer {
  uint32 pid = 1;
}

/*********************************************************\
 ** LAND/OBJECT Packets
\*********************************************************/

message DGCreateObjectPacket {
  TBuildingObject object = 1;
}

message DGDeleteObjectPacket {
  uint32 id = 1;
}

message DGUpdateLandPacket {
  TBuildingLand land = 1;
}

/*********************************************************\
 ** MARRIAGE/WEDDING Packets
\*********************************************************/

message DGMarriageAddPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  uint32 marry_time = 3;
  bytes name1 = 4;
  bytes name2 = 5;
}

message DGMarriageUpdatePacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  int32 love_point = 3;
  bool married = 4;
}

message DGMarriageRemovePacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message DGWeddingRequestPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message DGWeddingReadyPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  uint32 map_index = 3;
}

message DGWeddingStartPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message DGWeddingEndPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

/*********************************************************\
 ** BILLING Packets
\*********************************************************/

message DGBillingRepairPacket {
  repeated uint32 login_keys = 1;
  repeated bytes logins = 2;
  repeated bytes hosts = 3;
}

message DGBillingExpirePacket {
  bytes login = 1;
  uint32 bill_type = 2;
  uint32 remain_seconds = 3;
}

message DGBillingLoginPacket {
  repeated uint32 login_keys = 1;
  repeated uint32 logins = 2;
}

message DGBillingCheckPacket {
  repeated uint32 keys = 1;
}

/*********************************************************\
 ** GUILD Packets
\*********************************************************/

message DGGuildLoadPacket {
  uint32 guild_id = 1;
}

message DGGuildSkillUpdatePacket {
  uint32 guild_id = 1;
  int32 amount = 2;
  repeated uint32 skill_levels = 3;
  uint32 skill_point = 4;
  uint32 save = 5;
}

message DGGuildExpUpdatePacket {
  uint32 guild_id = 1;
  int32 amount = 2;
}

message DGGuildAddMemberPacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  uint32 grade = 3;
  bool is_general = 4;
  uint32 job = 5;
  uint32 level = 6;
  uint32 offer = 7;
  bytes name = 8;
}

message DGGuildRemoveMemberPacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
}

message DGGuildChangeGradePacket {
  uint32 guild_id = 1;
  uint32 grade = 2;
}

message DGGuildChangeMemberDataPacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  uint32 offer = 3;
  uint32 level = 4;
  uint32 grade = 5;
}

message DGGuildDisbandPacket {
  uint32 guild_id = 1;
}

message DGGuildLadderPacket {
  uint32 guild_id = 1;
  int32 ladder_point = 2;
  repeated int32 wins = 3;
  repeated int32 draws = 4;
  repeated int32 losses = 5;
}

message DGGuildWarPacket {
  uint32 type = 1;
  uint32 war = 2;
  uint32 guild_from = 3;
  uint32 guild_to = 4;
  int32 war_price = 5;
  int32 initial_score = 6;
}

message DGGuildWarScorePacket {
  uint32 guild_gain_point = 1;
  uint32 guild_opponent = 2;
  int32 score = 3;
  int32 bet_score = 4;
}

message DGGuildSkillUsableChangePacket {
  uint32 guild_id = 1;
  uint32 skill_vnum = 2;
  bool usable = 3;
}

message DGGuildMoneyChangePacket {
  uint32 guild_id = 1;
  int32 total_gold = 2;
}

message DGGuildMoneyWithdrawPacket {
  uint32 guild_id = 1;
  int32 change_gold = 2;
}

message DGGuildWarReserveAddPacket {
  uint32 id = 1;
  uint32 guild_from = 2;
  uint32 guild_to = 3;
  uint32 time = 4;
  uint32 type = 5;
  int32 war_price = 6;
  int32 initial_score = 7;
  bool started = 8;
  uint32 bet_from = 9;
  uint32 bet_to = 10;
  int32 power_from = 11;
  int32 power_to = 12;
  int32 handicap = 13;
}

message DGGuildWarReserveDeletePacket {
  uint32 id = 1;
}

message DGGuildWarBetPacket {
  uint32 id = 1;
  bytes login = 2;
  uint32 gold = 3;
  uint32 guild_id = 4;
}

message DGGuildChangeMasterPacket {
  uint32 guild_id = 1;
}

message DGGuildSafeboxPacket {
  uint32 sub_header = 1;
  uint32 guild_id = 2;
  TItemData item = 3;
  uint64 gold = 4;
  uint32 size = 5;
  repeated TItemData items = 6;
  TGuildSafeboxLogTable added_log = 7;
}

/*********************************************************\
 ** PARTY Packets
\*********************************************************/

message DGPartyCreatePacket {
  uint32 leader_pid = 1;
}

message DGPartyDeletePacket {
  uint32 leader_pid = 1;
}

message DGPartyAddPacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 state = 3;
}

message DGPartyRemovePacket {
  uint32 pid = 1;
}

message DGPartyStateChangePacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 role = 3;
  bool flag = 4;
}

message DGPartySetMemberLevelPacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 level = 3;
}
